--- a/css/todo.css
+++ b/css/todo.css
@@ -43,7 +43,7 @@ body {
 label { display: block; width: 150px; float: left; }
 
 ul { border: 0px solid; margin: 0px; }
-.note_text { font-size: 0.7em; }
+.note_text { font-size: 0.85em; }
 .detail_view .note_text { font-size: 0.8em; }
 
 .detail_view_task { font-size: 2.0em; font-weight: bold; text-align: center; border: 1px solid black; background-color: #ffeed3; }
@@ -74,4 +74,12 @@ ul { border: 0px solid; margin: 0px; }
 	color: red;
 	font-weight: bold;
 	background-color: yellow;
+}
+
+.add_note_wrapper {
+	margin-top: 0.5em;
+}
+
+.add_note {
+	width: 98%;
 }
