--- a/css/todo.css
+++ b/css/todo.css
@@ -19,6 +19,15 @@
 body {
 	font-family: "Open Sans", Helvetica, Verdana, sans;
 	border: 0px solid red;
+	margin: 15px;
+}
+
+a {
+	text-decoration: none;
+}
+
+.show_detail {
+	margin-right: 0.5em;
 }
 
 .small_text { font-size: 0.65em; margin: 0px; font-weight: normal; }
@@ -95,4 +104,13 @@ ul { border: 0px solid; margin: 0px; }
 	font-size        : 95%;
 	font-family      : "Source Code Pro", "Consolas", monospace;
 	background-color : rgba(27,31,35,0.05);
+}
+
+.detail_notes {
+	margin-top: 0.6em;
+}
+
+.detail_menu {
+	font-size: 70%;
+	margin-top: 1em;
 }
