--- a/css/todo.css
+++ b/css/todo.css
@@ -9,7 +9,7 @@
 
 @font-face {
 	font-family : 'Open Sans';
-	font-style  : bold;
+	font-style  : normal;
 	font-weight : 700;
 	src         :
 		local('Open Sans Bold'),
